--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,11 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+   - task: DotNetCoreCLI@2
+  displayName: 'Publish .NET Core app'
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+    arguments: '--configuration Release --output $(Build.ArtifactStagingDirectory)'
+
